--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,17 @@ body {
     margin-top: 30px;
   }
 
+  .card {
+    width: 40%;
+    margin: 0 auto 20px auto !important;
+  }
+
+  
+
+  footer h5{
+    font-size: 18px;
+  }
+
 }
 
 @media (width <= 768px) {
